--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>主页</title>
+    <title>后台管理</title>
     <script src="~/js/vue.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/md5.js"></script>
