--- a/Views/Search/Index.cshtml
+++ b/Views/Search/Index.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-header" style="padding-top:8px;padding-bottom:8px;box-sizing:border-box;height:50px;">
                 <div class="header-search">
-                    <input type="text" id="txt_search" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
+                    <input type="text" id="txt_search" placeholder="搜索" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
                     <div class="header-search-btn">
                         <img style="width:20px;height:20px;" src="../fonts/Search_24.14055636896px_1181298_easyicon.net.png" />
                     </div>
