--- a/Views/Class/Index.cshtml
+++ b/Views/Class/Index.cshtml
@@ -40,7 +40,7 @@
                 <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
                 <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
                 <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
-                <a href="javascript:;" class="a_rightTop" id="a_user" style="display:none;"></a>
+                <a href="/Personal" class="a_rightTop" id="a_user" style="display:none;"></a>
                 <span id="_shuxian2" style="font-size: 16px;line-height: 50px;display:none;">|</span>
                 <a href="javascript:;" class="a_rightTop" id="a_logout" style="display:none;">注销</a>
             </div>
@@ -147,7 +147,7 @@
                         <input type="text" class="form-control" id="validCode" />
                     </div>
                     <div class="col-sm-4">
-                        <img src="../api/User/VerificationCode?seed=123" onclick="this.src+='1'" alt="验证码" title="点击换一个" />
+                        <img src="../api/User/VerificationCode?seed=123" id="imgCode" onclick="this.src+='1'" alt="验证码" title="点击换一个" />
                     </div>
 
                 </div>
@@ -286,6 +286,7 @@
             $('#validCode').val('');
             $('#divReg').hide();
             $('#divLogin').show();
+            $('#imgCode').click();
             layer.open({
                 type: 1,
                 title: '登录',
