--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="navbar-header" style="padding-top:8px;padding-bottom:8px;box-sizing:border-box;height:50px;">
                 <div class="header-search">
-                    <input type="text" id="txt_search" readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
+                    <input type="text" id="txt_search"  placeholder="搜索"  readonly onfocus="this.removeAttribute('readonly');" autocomplete="off" />
                     <div class="header-search-btn">
                         <img style="width:20px;height:20px;" src="../fonts/Search_24.14055636896px_1181298_easyicon.net.png" />
                     </div>
@@ -41,7 +41,7 @@
                 <a href="javascript:;" class="a_rightTop" id="a_login" style="" onclick="ShowLoginDlg()">登录</a>
                 <span id="_shuxian" style="font-size: 16px;line-height: 50px;">|</span>
                 <a href="javascript:;" class="a_rightTop" id="a_reg" onclick="ShowRegDlg()">注册</a>
-                <a href="javascript:;" class="a_rightTop" id="a_user" style="display:none;"></a>
+                <a href="/Personal" class="a_rightTop" id="a_user" style="display:none;"></a>
                 <span id="_shuxian2" style="font-size: 16px;line-height: 50px;display:none;">|</span>
                 <a href="javascript:;" class="a_rightTop" id="a_logout" style="display:none;">注销</a>
             </div>
@@ -198,7 +198,7 @@
                         <input type="text" class="form-control" id="validCode" />
                     </div>
                     <div class="col-sm-4">
-                        <img src="../api/User/VerificationCode?seed=123" onclick="this.src+='1'" alt="验证码" title="点击换一个" />
+                        <img src="../api/User/VerificationCode?seed=123" id="imgCode" onclick="this.src+='1'" alt="验证码" title="点击换一个" />
                     </div>
 
                 </div>
@@ -572,6 +572,7 @@
             $('#validCode').val('');
             $('#divReg').hide();
             $('#divLogin').show();
+            $('#imgCode').click();
             layer.open({
                 type: 1,
                 title: '登录',
